[gd_scene load_steps=33 format=2]

[ext_resource path="res://characters/assets/hero.png" type="Texture" id=1]
[ext_resource path="res://characters/hero.gd" type="Script" id=3]
[ext_resource path="res://items/light.png" type="Texture" id=4]
[ext_resource path="res://audio/attack.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "walk_up",
"speed": 7.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 8 ) ],
"loop": true,
"name": "walk_right",
"speed": 7.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 11 ) ],
"loop": true,
"name": "walk_down",
"speed": 7.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 5 ) ],
"loop": true,
"name": "walk_left",
"speed": 7.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "attack_up",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "attack_down",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
height = 10.0

[sub_resource type="CircleShape2D" id=16]
radius = 180.011

[sub_resource type="CapsuleShape2D" id=28]
radius = 3.0
height = 0.0

[node name="Hero" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource( 3 )

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 13 )
animation = "idle_left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 14 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 512
collision_mask = 512

[node name="HitRadius" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 16 )

[node name="SwordSpawnPoint" type="Node2D" parent="."]
position = Vector2( 0, -10 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1, -14.5 )
texture = ExtResource( 4 )
texture_scale = 6.0
color = Color( 1, 0.956863, 0.545098, 1 )
energy = 0.6
shadow_color = Color( 0, 0, 0, 0.537255 )

[node name="FootprintCollider" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootprintCollider"]
position = Vector2( 0, -3 )
shape = SubResource( 28 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="area_entered" from="FootprintCollider" to="." method="_on_footprint_area_entered"]
